<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceManagement"
    tools:ignore="ContentDescription">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/logo_services"
                android:layout_width="97dp"
                android:layout_height="86dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="22dp"
                android:src="@drawable/ic_logo"
                android:tint="@color/color_blue" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="12dp"
                android:text="@string/services_management"
                android:textColor="@color/color_blue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="500dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button_closed"
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:background="@color/color_blue"
                    android:src="@drawable/ic_close"
                    android:verticalScrollbarPosition="right" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="15dp"
            android:text="@string/held_desk"
            android:textColor="@color/color_blue"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_arrow"
             />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="66dp"
                    android:layout_marginTop="23dp"
                    android:layout_marginBottom="26dp"
                    android:text="@string/new_ticket"
                    android:textColor="@color/color_blue"
                    android:textSize="22sp"
                    android:textStyle="bold">

                </TextView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="68dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/color_blue"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/text_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:autofillHints="12"
                        android:background="@color/color_white"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:textSize="22sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="70sp"
                    android:layout_marginEnd="68sp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/color_blue"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/text_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="@color/color_white"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:background="@color/color_white" />

                    <EditText
                        android:id="@+id/text_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:autofillHints="text"
                        android:background="@color/color_white"
                        android:hint="@string/location"
                        android:inputType="none"
                        android:textSize="22sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="68dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/color_blue"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/text_request"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:autofillHints="text"
                        android:background="@color/color_white"
                        android:hint="@string/name_description"
                        android:inputType="text"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="68dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/color_blue"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/text_list"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:autofillHints="text"
                        android:background="@color/color_white"
                        android:hint="@string/select_printer"
                        android:inputType="none"
                        android:textSize="22sp" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="-2dp"
                        android:src="@drawable/ic_list" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="68dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/color_blue"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/text_print"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:autofillHints="text"
                        android:background="@color/color_white"
                        android:hint="@string/Email"
                        android:inputType="textEmailAddress"
                        android:textSize="22sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="40dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_services"
                        android:layout_width="283dp"
                        android:layout_height="match_parent"
                        android:background="@color/color_blue"
                        android:text="@string/send_request"
                        android:textColor="@color/color_white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>