<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/color_gray">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:text="@string/question_inquiry"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/calificacion_baja"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/textView3"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/color_gray"
            android:src="@drawable/ic_star" />

        <ImageButton
            android:id="@+id/textView4"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="12dp"
            android:background="@color/color_gray"
            android:src="@drawable/ic_star" />

        <ImageButton
            android:id="@+id/textView5"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="12dp"
            android:background="@color/color_gray"
            android:src="@drawable/ic_star" />

        <ImageButton
            android:id="@+id/textView6"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="12dp"
            android:background="@color/color_gray"
            android:src="@drawable/ic_star" />

        <ImageButton
            android:id="@+id/textView7"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="12dp"
            android:background="@color/color_gray"
            android:src="@drawable/ic_star" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/calificacion_alta"
            android:textSize="12sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>