<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_gray"
    tools:ignore="ContentDescription">



    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/question_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_inquiry"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:text="@string/_1_text"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:background="@color/color_gray" />

            <ImageButton
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/color_gray"
                android:src="@drawable/ic_close"
                android:tint="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:text="@string/_2_text"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:background="@color/color_gray" />

            <ImageButton
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/color_gray"
                android:src="@drawable/ic_close"
                android:tint="@color/colorPrimary" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>