<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    tools:ignore="ContentDescription">

    <TextView
        android:id="@+id/userText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Nombre completo del usuario" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/button_management_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/check_contacts">

            <ImageView
                android:layout_width="152dp"
                android:layout_height="110dp"
                android:padding="22dp"
                android:src="@drawable/ic_logo" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/activity_services"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_survey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/ingress_report"
            app:layout_constraintRight_toLeftOf="@+id/contact_support">

            <ImageView
                android:layout_width="152dp"
                android:layout_height="110dp"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:src="@drawable/ic_survey"
                android:tint="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/activity_polls"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/settings"
                android:layout_width="152dp"
                android:layout_height="110dp"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:src="@drawable/ic_settings"
                android:tint="@android:color/white" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/activity_config"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>